--- a/a.css
+++ b/a.css
@@ -3,6 +3,7 @@
   --hover-color: #1e63b3;
   --success-color: #43b581;
   --danger-color: #982929;
+  --secondcolor: #D5C323;
   --channel-color: rgba(255, 255, 255, 0.3);
   --channel-hovered: rgba(255, 255, 255, 0.7);
   --channel-unread: var(--main-color);
@@ -3329,7 +3330,7 @@ textarea::-webkit-scrollbar {
 }
 .message__5126c .timestamp_c19a55 {
   text-align: center;
-  color: var(--main-color)
+  color: var(--secondcolor)
 }
 .message__5126c .contents_c19a55,
 .message__5126c .messageContent_c19a55 {
