--- a/a.css
+++ b/a.css
@@ -3,7 +3,7 @@
   --hover-color: #1e63b3;
   --success-color: #43b581;
   --danger-color: #982929;
-  --secondcolor: #D5C323;
+  --second-color: #D5C323;
   --channel-color: rgba(255, 255, 255, 0.3);
   --channel-hovered: rgba(255, 255, 255, 0.7);
   --channel-unread: var(--main-color);
